--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-MYSQL_USERNAME=db_username
-MYSQL_ROOT_PASSWORD=db_password
-MYSQL_DATABASE=db_name
-MYSQL_HOST=127.0.0.1
+MYSQL_USERNAME=myapp_user
+MYSQL_ROOT_PASSWORD=mypassword
+MYSQL_DATABASE=myapp_db
+MYSQL_HOST=34.233.120.64
 MYSQL_LOCAL_PORT=3306
 MYSQL_DOCKER_PORT=3306
 
