--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MYSQL_USERNAME=myapp_user
 MYSQL_ROOT_PASSWORD=mypassword
 MYSQL_DATABASE=myapp_db
-MYSQL_HOST=34.233.120.64
+MYSQL_HOST=(use public ip)
 MYSQL_LOCAL_PORT=3306
 MYSQL_DOCKER_PORT=3306
 
