--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MYSQL_USERNAME=myapp_user
 MYSQL_ROOT_PASSWORD=mypassword
 MYSQL_DATABASE=myapp_db
-MYSQL_HOST=(use public ip)
+MYSQL_HOST=54.163.14.23
 MYSQL_LOCAL_PORT=3306
 MYSQL_DOCKER_PORT=3306
 
